[package]
name = "eco"
version = "0.22.0"
authors = [
    "bvssvni <bvssvni@gmail.com>"
]
keywords = ["piston", "ecosystem", "dependencies", "analysis"]
description = "A tool for reasoning about breaking changes in Rust ecosystems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pistondevelopers/eco.git"
homepage = "https://github.com/pistondevelopers/eco"

[lib]
name = "eco"
path = "src/lib.rs"

[dependencies]
piston_meta = "2.0.0"
hyper = "0.9.7"
semver = "0.2.3"
